@@ -3,6 +3,7 @@ ZoomingReinvented_zoom-sensitivity=Zoom sensitivity
 ZoomingReinvented_max-world-zoom-out=Max world zoom out level
 ZoomingReinvented_default-map-zoom-level=Default map zoom level
 ZoomingReinvented_quick-zoom-out-zoom-level='Quick zoom out' map zoom level
+ZoomingReinvented_binoculars-zoom-level=Binoculars zoom level
 ZoomingReinvented_disable-map-zoom-out=Disable map zoom out after map move
 
 [mod-setting-description]
@@ -10,6 +11,7 @@ ZoomingReinvented_zoom-sensitivity=Defines how big is the change when zooming in
 ZoomingReinvented_max-world-zoom-out=Defines how far you can zoom out and still see the world. In player view it defines maximum zoom out, in the map it defines when zoom to world view switches back to map view. Base game's value is about 0.4.
 ZoomingReinvented_default-map-zoom-level=Defines at what zoom level the map opens. Base game's value is about 0.0313.
 ZoomingReinvented_quick-zoom-out-zoom-level=Defines at what zoom level the map opens when using 'Quick zoom out'.
+ZoomingReinvented_binoculars-zoom-level=Defines at what zoom level the map opens when using Binoculars item.
 ZoomingReinvented_disable-map-zoom-out=Defines whether to disable map zooming out after the map position has changed (by dragging, using move controls or zooming in). This to prevent sudden map position changes when zooming out (see known issues for explanation why this happens). If this option is selected, after you move the map, the only way to zoom out is to close and open the map again or use 'Quick zoom out'.
 
 [controls]
