@@ -36,10 +36,19 @@ data:extend({
         order = "04"
     },
     {
+        type = "double-setting",
+        name = "ZoomingReinvented_binoculars-zoom-level",
+        setting_type = "runtime-per-user",
+        default_value = 0.3,
+        maximum_value = 1.0,
+        minimum_value = 0.0001,
+        order = "05"
+    },
+    {
         type = "bool-setting",
         name = "ZoomingReinvented_disable-map-zoom-out",
         setting_type = "runtime-per-user",
         default_value = false,
-        order = "05"
+        order = "06"
     }
 })
